--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </script>
     </head>
     <body>
-    <script src="build/three.min.js"></script>
+    <script src="js/three.min.js"></script>
     <script type="text/javascript">
 
     var scene, camera, renderer;
