--- a/BVH_player.html
+++ b/BVH_player.html
@@ -26,7 +26,7 @@
 
 	<script src="js/Bvh.js"></script>
 
-	<script src='js/libs/dat.gui.min.js'></script>
+	<script src='js/dat.gui.min.js'></script>
 
 	<script>
 		var vsize = { x:100, y:100, z:0 };
