--- a/BVH_player.html
+++ b/BVH_player.html
@@ -21,7 +21,7 @@
 
 </head>
 
-	<script src="js/three.min.66.js"></script>
+	<script src="js/three.min.js"></script>
 	<script src="js/BufferGeometryUtils.66.js"></script>
 
 	<script src="js/Bvh.js"></script>
