--- a/BVH_player.html
+++ b/BVH_player.html
@@ -11,6 +11,7 @@
 	<meta property="og:site_name" content="LOTH"/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:description" content="Experiment full morphing in webGl"/>
+	<link href="css/dianna.css" rel="stylesheet" type="text/css">
 	<meta name="language" content="en-us" />
 
 </head>
