--- a/BVH_player.html
+++ b/BVH_player.html
@@ -82,8 +82,6 @@
 		var sky;
 		var skyGeo;
 
-		var debug;
-
 		var bvhReader = null;
 
 		var displayModel = true;
@@ -96,9 +94,6 @@
 
 		function init() {
 
-			out1 = document.getElementById("output1");
-			out2 = document.getElementById("output2");
-
 			vsize.x = window.innerWidth;
 			vsize.y = window.innerHeight;
 			vsize.z = vsize.x / vsize.y;
@@ -108,7 +103,6 @@
 
             if(SeaStandard)lightPos.horizontal+=180;
 
-			debug = document.getElementById("debug");
 
 			document.getElementById('files').addEventListener('change', handleFileSelect, false);
 
@@ -128,10 +122,6 @@
 		 		};
 		 	})(f);
 		 	reader.readAsText(f);
-		}
-
-		function debugTell(s) {
-			debug.innerHTML = s;
 		}
 
 		function initScene3D() {
@@ -268,7 +258,7 @@
 		}
 
 		function initBVHGui() {
-			var f5 = gui.addFolder('BVH Animation BETA');
+			var f5 = gui.addFolder('BVH Viewer BETA');
 
 			BVHanimConfig.climb = function() { loadBVH("/01/01_12.bvh"); };
             BVHanimConfig.run = function() { loadBVH("/02/02_03.bvh"); };
@@ -337,30 +327,6 @@
 			}
 		}
 
-		function traceMatrix(o, n) {
-				var e = o.matrix.elements
-				var s = o.name+"<br>";
-				var q = o.quaternion.clone();
-				//s+=( q.x ).toFixed(2)+ "_"+ ( q.y ).toFixed(2) +  "_"+ (q.z).toFixed(2)+ "_"+  (q.w).toFixed(2);
-				//s+=( b.rot.x * ToDeg ).toFixed(2)+ "_"+ ( b.rot.y * ToDeg ).toFixed(2) +  "_"+ ( b.rot.z * ToDeg ).toFixed(2);
-
-				//s+= "<br>"
-
-				s+=( o.rotation.x * ToDeg ).toFixed(2)+ "_"+ ( o.rotation.y * ToDeg ).toFixed(2) +  "_"+ ( o.rotation.z * ToDeg ).toFixed(2)+ "_"+ o.rotation.order;
-
-				s+= "<br>"
-
-				s += "_"+ e[0].toFixed(2) + "_" + e[1].toFixed(2) + "_"+ e[2].toFixed(2) + "_" + e[3] + "<br>";
-				s += "_"+ e[4].toFixed(2) + "_" + e[5].toFixed(2) + "_"+ e[6].toFixed(2) + "_" + e[7] + "<br>";
-				s += "_"+ e[8].toFixed(2) + "_" + e[9].toFixed(2) + "_"+ e[10].toFixed(2) + "_" + e[11] + "<br>";
-				s += "_"+ e[12] + "_" + e[13] + "_"+ e[14] + "_" + e[15] + "<br>";
-				
-				if(n===1) out1.innerHTML = s;
-				else out2.innerHTML = s;
-			}
-
-
-
 		//-----------------------------------------------------
 		//  GUI
 		//-----------------------------------------------------
@@ -368,10 +334,6 @@
 		function addGUI() {
 			gui = new dat.GUI({autoPlace:false, width:204});
 			document.getElementById('gui').appendChild(gui.domElement);
-		}
-		
-		function tell(s){
-			document.getElementById("debug").innerHTML = s;
 		}
 
 		
@@ -472,14 +434,10 @@
 	<body>
 		<div id="viewport"></div>
 		<div id="hubs">
-			<div id="debug"></div>
 			<div id="guiContener">
                 <div id="gui"></div>
             </div>
 			<input type="file" id="files" />
 		</div>
-		
-		<div id="output1"></div>
-		<div id="output2"></div>
 	</body>
 </html>
