--- a/BVH_player.html
+++ b/BVH_player.html
@@ -220,6 +220,7 @@
 
 		var BVHset = {ax:"x", ay:"y", az:"z", dx:1, dy:1, dz:1, rx:0, ry:0, rz:0, order:"XYZ"};
 		var BVHanimConfig = {
+            debug:true,
 			speed:0.25,
 			size:1,
 			px:0, py:0, pz:0,
